# weekly_prep

./: .gitignore  README.md  pyproject.toml  requirements.txt
output/: report.md
src/weekly/: crew.py  main.py
src/weekly/config/: agents.yaml  tasks.yaml
src/weekly/tools/: calendar_tool.py  doc_tool.py  gmail_tool.py  hubspot_tool.py  slack_tool.py
